Fixing background image scaling on mobile

--- a/css/desktopStyle.css
+++ b/css/desktopStyle.css
@@ -21,6 +21,9 @@ html, body {
   height:40em;
   background: url('/public/photos/background1.gif') no-repeat center;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-attachment: fixed;
   -webkit-transition: all 1s ease 0s;
   transition: all 1s ease 0s;
@@ -30,6 +33,9 @@ html, body {
   height:40em;
   background: url('/public/photos/background2.gif') no-repeat center;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-attachment: fixed;
 }
 
@@ -37,6 +43,9 @@ html, body {
   height:40em;
   background: url('/public/photos/background3.gif') no-repeat center;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-attachment: fixed;
 }
 
